--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <button onclick="buttonClick()">Click me to achieve</button>
+    <div class="frame">
+        <button onclick="buttonClick()">Click me to achieve</button>
+    </div>
     <script>
         function buttonClick() {
             GEMS.event("button1");
