--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <title>GEMS API Example</title>
 
     <link rel="stylesheet" href="index.css">
-    <script src="https://unpkg.com/bayz-gems-api@0.1.12/dist/umd/index.js">
+    <script src="https://unpkg.com/bayz-gems-api@latest/dist/umd/index.js">
     </script>
 </head>
 <body>
