--- a/index2.html
+++ b/index2.html
@@ -14,10 +14,13 @@
         <h2>Score:&nbsp;<span id="score">0</span></h2>
         <button disabled id="start"">Start the game</button>
         <div>
-        <button disabled id="play">Score&nbsp;</button>
-        <input disabled id="scorebox" type="number" value="10"/>&nbsp; points
+            <button disabled id="play">Score&nbsp;</button>
+            <input disabled id="scorebox" type="number" value="10"/>&nbsp; points
         </div>
-    <button disabled id="finish">Finish the game</button>
+        <button disabled id="finish">Finish the game</button>
+        <div>
+            GEMS&nbsp;<span id="version"></span>
+        </div>
     </div>
     <script src="index2.js"></script>
 </body>
