--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=(), user-id=()">
     <title>GEMS API Example</title>
 
     <link rel="stylesheet" href="index.css">
